Amélioration prod matrice par blocs

--- a/TravauxDirige_n.3/Sources/ProdMatBloc/Makefile
+++ b/TravauxDirige_n.3/Sources/ProdMatBloc/Makefile
@@ -11,7 +11,7 @@ CXXFLAGS2 = ${CXXFLAGS} -O2 -march=native -Wall
 CXXFLAGS += -O3 -march=native -Wall
 endif
 
-ALL= dotproduct.exe dotproduct_thread.exe TestProductMatrix.exe bhudda.exe bitonic.exe
+ALL= TestProductMatrix.exe
 
 default:	help
 
@@ -25,9 +25,6 @@ clean:
 
 TestProductMatrix.exe : TestProductMatrix.cpp Matrix.hpp Matrix.cpp ProdMatMat_Bloc.cpp 
 	$(CXX) $(CXXFLAGS2) $^ -o $@ $(LIB)	
-
-bitonic.exe : bitonic.cpp Vecteur.hpp Vecteur.cpp
-	$(CXX) $(CXXFLAGS) -o $@ $^ $(LIB)	
 
 help:
 	@echo "Available targets : "
